--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "bootstrap": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "react-query": "^3.13.4",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
